--- a/styles/theme.css
+++ b/styles/theme.css
@@ -7,7 +7,7 @@
  *
  * http://docs.jquery.com/UI/Theming/API
  */
-
+w
 /* Layout helpers
 ----------------------------------*/
 .ui-helper-hidden { display: none; }
