--- a/styles/theme.css
+++ b/styles/theme.css
@@ -56,7 +56,7 @@
 .ui-widget { font-family: Arial, Verdana, sans-serif; font-size: 12px; }
 .ui-widget .ui-widget { font-size: 1em; }
 .ui-widget input, .ui-widget select, .ui-widget textarea, .ui-widget button { font-family: Lucida Grande, Lucida Sans, Arial, sans-serif; font-size: 1em; }
-.ui-widget-content { border: 1px solid #dddddd; background: #f2f5f7 url("#{resource['primefaces-ATASkin:images/ui-bg_highlight-hard_100_f2f5f7_1x100.png']}") 50% top repeat-x; color: #362b36; }
+.ui-widget-content { border: 1px solid #dddddd; background: #f2f5f7 url("../images_skin/ui-bg_highlight-hard_100_f2f5f7_1x100.png") 50% top repeat-x; color: #362b36; }
 .ui-widget-content a { color: #362b36; }
 .ui-widget-header { border: 1px solid #aed0ea; background: url("../images_skin/fond-popup-header.png") repeat scroll 0 0 transparent; color: #FFFFFF; font-weight: bold; }
 .ui-widget-header a { color: #222222; }
@@ -67,13 +67,13 @@
 .ui-state-default a, .ui-state-default a:link, .ui-state-default a:visited { color: #2779aa; text-decoration: none; }
 .ui-state-hover, .ui-widget-content .ui-state-hover, .ui-widget-header .ui-state-hover, .ui-state-focus, .ui-widget-content .ui-state-focus, .ui-widget-header .ui-state-focus { }
 .ui-state-hover a, .ui-state-hover a:hover { color: #0070a3; text-decoration: none; }
-.ui-state-active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active { border: 1px solid #2694e8; background: #3baae3 url("#{resource['primefaces-ATASkin:images/ui-bg_glass_50_3baae3_1x400.png']}") 50% 50% repeat-x; font-weight: bold; color: #ffffff; }
+.ui-state-active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active { border: 1px solid #2694e8; background: #3baae3 url("../images_skin/ui-bg_glass_50_3baae3_1x400.png") 50% 50% repeat-x; font-weight: bold; color: #ffffff; }
 .ui-state-active a, .ui-state-active a:link, .ui-state-active a:visited { color: #ffffff; text-decoration: none; }
 .ui-widget :active { outline: none; }
 
 /* Interaction Cues
 ----------------------------------*/
-.ui-state-highlight, .ui-widget-content .ui-state-highlight, .ui-widget-header .ui-state-highlight  {border: 1px solid #f9dd34; background: #ffef8f url("#{resource['primefaces-ATASkin:images/ui-bg_highlight-soft_25_ffef8f_1x100.png']}") 50% top repeat-x; color: #363636; }
+.ui-state-highlight, .ui-widget-content .ui-state-highlight, .ui-widget-header .ui-state-highlight  {border: 1px solid #f9dd34; background: #ffef8f url("../images_skin/ui-bg_highlight-soft_25_ffef8f_1x100.png") 50% top repeat-x; color: #363636; }
 .ui-state-highlight a, .ui-widget-content .ui-state-highlight a,.ui-widget-header .ui-state-highlight a { color: #363636; }
 .ui-state-error, .ui-widget-content .ui-state-error, .ui-widget-header .ui-state-error { }
 .ui-state-error a, .ui-widget-content .ui-state-error a, .ui-widget-header .ui-state-error a { color: #ffffff; }
@@ -86,14 +86,14 @@
 ----------------------------------*/
 
 /* states and images */
-.ui-icon { width: 16px; height: 16px; background-image: url("#{resource['primefaces-ATASkin:images/ui-icons_72a7cf_256x240.png']}"); }
-.ui-widget-content .ui-icon {background-image: url("#{resource['primefaces-ATASkin:images/ui-icons_72a7cf_256x240.png']}"); }
-.ui-widget-header .ui-icon {background-image: url("#{resource['primefaces-ATASkin:images/ui-icons_72a7cf_256x240.png']}"); }
-.ui-state-default .ui-icon { background-image: url("#{resource['primefaces-ATASkin:images/ui-icons_3d80b3_256x240.png']}"); }
-.ui-state-hover .ui-icon, .ui-state-focus .ui-icon {background-image: url("#{resource['primefaces-ATASkin:images/ui-icons_2694e8_256x240.png']}"); }
-.ui-state-active .ui-icon {background-image: url("#{resource['primefaces-ATASkin:images/ui-icons_ffffff_256x240.png']}"); }
-.ui-state-highlight .ui-icon {background-image: url("#{resource['primefaces-ATASkin:images/ui-icons_2e83ff_256x240.png']}"); }
-.ui-state-error .ui-icon, .ui-state-error-text .ui-icon {background-image: url("#{resource['primefaces-ATASkin:images/ui-icons_ffffff_256x240.png']}"); }
+.ui-icon { width: 16px; height: 16px; background-image: url("../images_skin/ui-icons_72a7cf_256x240.png"); }
+.ui-widget-content .ui-icon {background-image: url("../images_skin/ui-icons_72a7cf_256x240.png"); }
+.ui-widget-header .ui-icon {background-image: url("../images_skin/ui-icons_72a7cf_256x240.png"); }
+.ui-state-default .ui-icon { background-image: url("../images_skin/ui-icons_3d80b3_256x240.png"); }
+.ui-state-hover .ui-icon, .ui-state-focus .ui-icon {background-image: url("../images_skin/ui-icons_2694e8_256x240.png"); }
+.ui-state-active .ui-icon {background-image: url("../images_skin/ui-icons_ffffff_256x240.png"); }
+.ui-state-highlight .ui-icon {background-image: url("../images_skin/ui-icons_2e83ff_256x240.png"); }
+.ui-state-error .ui-icon, .ui-state-error-text .ui-icon {background-image: url("../images_skin/ui-icons_ffffff_256x240.png"); }
 
 /* positioning */
 .ui-icon-carat-1-n { background-position: 0 0; }
@@ -284,7 +284,7 @@
 
 /* Overlays */
 .ui-widget-overlay { background: #eeeeee 50% 50% repeat; opacity: .50;filter:Alpha(Opacity=50); }
-.ui-widget-shadow { margin: -7px 0 0 -7px; padding: 7px; background: #000000 url("#{resource['primefaces-ATASkin:images/ui-bg_highlight-hard_70_000000_1x100.png']}") 50% top repeat-x; opacity: .30;filter:Alpha(Opacity=30); -moz-border-radius: 8px; -khtml-border-radius: 8px; -webkit-border-radius: 8px; border-radius: 8px; }/*
+.ui-widget-shadow { margin: -7px 0 0 -7px; padding: 7px; background: #000000 url("../images_skin/ui-bg_highlight-hard_70_000000_1x100.png") 50% top repeat-x; opacity: .30;filter:Alpha(Opacity=30); -moz-border-radius: 8px; -khtml-border-radius: 8px; -webkit-border-radius: 8px; border-radius: 8px; }/*
  * jQuery UI Resizable 1.8.18
  *
  * Copyright 2011, AUTHORS.txt (http://jqueryui.com/about)
