--- a/styles/theme.css
+++ b/styles/theme.css
@@ -68,7 +68,7 @@
 .ui-state-default a, .ui-state-default a:link, .ui-state-default a:visited { color: #2779aa; text-decoration: none; }
 .ui-state-hover, .ui-widget-content .ui-state-hover, .ui-widget-header .ui-state-hover, .ui-state-focus, .ui-widget-content .ui-state-focus, .ui-widget-header .ui-state-focus { }
 .ui-state-hover a, .ui-state-hover a:hover { color: #0070a3; text-decoration: none; }
-.ui-state-active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active { border: 1px solid #2694e8; background: #3baae3 url("../images_skin/ui-bg_glass_50_3baae3_1x400.png") 50% 50% repeat-x; font-weight: bold; color: #ffffff; }
+.ui-state-active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active { }
 .ui-state-active a, .ui-state-active a:link, .ui-state-active a:visited { color: #000000; text-decoration: none; }
 .ui-widget :active { outline: none; }
 
@@ -94,9 +94,13 @@
 .ui-state-default .ui-icon { background-image: url("../images_skin/ui-icons_3d80b3_256x240.png"); }
 .ui-state-hover .ui-icon, .ui-state-focus .ui-icon {background-image: url("../images_skin/ui-icons_2694e8_256x240.png"); }
 .ui-dialog-titlebar .ui-state-hover .ui-icon {background-image: url("../images/close.gif"); }
-.ui-state-active .ui-icon {background-image: url("../images_skin/ui-icons_ffffff_256x240.png"); }
+.ui-state-active .ui-icon { }
 .ui-state-highlight .ui-icon {background-image: url("../images_skin/ui-icons_2e83ff_256x240.png"); }
 .ui-state-error .ui-icon, .ui-state-error-text .ui-icon {background-image: url("../images_skin/ui-icons_ffffff_256x240.png"); }
+.ui-paginator-first .ui-icon {background-image: url("../images_skin/rf-dataTable-style1-dataScroller-btn1.png");width: 26px;}
+.ui-paginator-prev .ui-icon {background-image: url("../images_skin/rf-dataTable-style1-dataScroller-btn2.png");width: 25px;}
+.ui-paginator-next .ui-icon {background-image: url("../images_skin/rf-dataTable-style1-dataScroller-btn3.png");width: 25px;}
+.ui-paginator-last .ui-icon {background-image: url("../images_skin/rf-dataTable-style1-dataScroller-btn4.png");width: 26px;}
 
 /* positioning */
 .ui-icon-carat-1-n { background-position: 0 0; }
@@ -231,12 +235,12 @@
 .ui-icon-pin-s { background-position: -144px -144px; }
 .ui-icon-play { background-position: 0 -160px; }
 .ui-icon-pause { background-position: -16px -160px; }
-.ui-icon-seek-next { background-position: -32px -160px; }
-.ui-icon-seek-prev { background-position: -48px -160px; }
-.ui-icon-seek-end { background-position: -64px -160px; }
+.ui-icon-seek-next { }
+.ui-icon-seek-prev { }
+.ui-icon-seek-end { }
 .ui-icon-seek-start { background-position: -80px -160px; }
 /* ui-icon-seek-first is deprecated, use ui-icon-seek-start instead */
-.ui-icon-seek-first { background-position: -80px -160px; }
+.ui-icon-seek-first { }
 .ui-icon-stop { background-position: -96px -160px; }
 .ui-icon-eject { background-position: -112px -160px; }
 .ui-icon-volume-off { background-position: -128px -160px; }
@@ -647,13 +651,37 @@ button.ui-button::-moz-focus-inner { border: 0; padding: 0; } /* reset extra pad
     border-collapse: collapse;
     color: #226177;
     font-size: 11px;
-    background-color: #EEF5FF;
 }
 
 .ui-datatable .ui-datatable-header, .ui-datatable .ui-datatable-footer {
     text-align: left;
     font-size: 11px;
 }
+
+.ui-datatable .ui-datatable-data td, .ui-datatable .ui-datatable-data-empty td {
+    background-color: white;
+    border-color: #C4C0C9;
+    border-style: solid;
+    border-width: 1px;
+    color: #000000;
+    font-family: Arial,Verdana,sans-serif;
+    font-size: 12px;
+    margin: 0;
+    overflow: hidden;
+    padding: 4px 10px;
+}
+
+.ui-datatable th {
+	border: 1px solid #C4C0C9;
+	text-align: left;
+	background-color: #EEF5FF;
+}
+
+.ui-datatable tfoot td {
+	border: 1px solid #C4C0C9;
+	text-align: center;
+}
+
 td.label {
     color: #335566;
     font-size: 11px;
@@ -666,12 +694,14 @@ td.label {
 	background: url("../images_skin/input_text_bg.png");
 }
 .chp_crp_short {
+	background-color: #FFFFFF;
     background-repeat: repeat-x;
     border: 1px inset #ECF3FD;
     padding-left: 2px;
     width: 60px;
 }
 .chp_crp_long {
+	background-color: #FFFFFF;
     background-repeat: repeat-x;
     border: 1px inset #ECF3FD;
     padding-left: 2px;
