--- a/styles/theme.css
+++ b/styles/theme.css
@@ -756,7 +756,7 @@ For tab level 4 style toolbar
  *
  * http://docs.jquery.com/UI/Datepicker#theming
  */
-.ui-datepicker { width: 17em; padding: .2em .2em 0; display: none; background-color: #F1EEE9; border: 1px solid #C4C0C9;}
+.ui-datepicker { width: 17em; padding: .2em .2em 0; display: none; background-color: #FFFFFF; border: 1px solid #C4C0C9;}
 .ui-datepicker .ui-datepicker-header { position:relative; padding:.2em 0; background: none repeat scroll 0 0 transparent; border: medium none;}
 .ui-datepicker .ui-datepicker-prev, .ui-datepicker .ui-datepicker-next { position:absolute; top: 2px; width: 1.8em; height: 1.8em; }
 .ui-datepicker .ui-datepicker-prev-hover, .ui-datepicker .ui-datepicker-next-hover { top: 2px; }
@@ -765,7 +765,7 @@ For tab level 4 style toolbar
 .ui-datepicker .ui-datepicker-prev-hover { left:2px; }
 .ui-datepicker .ui-datepicker-next-hover { right:2px; }
 .ui-datepicker .ui-datepicker-prev span, .ui-datepicker .ui-datepicker-next span { display: block; position: absolute; left: 50%; margin-left: -8px; top: 50%; margin-top: -8px;  }
-.ui-datepicker .ui-datepicker-title { margin: 0 2.3em; line-height: 1.8em; text-align: center; }
+.ui-datepicker .ui-datepicker-title { margin: 0 2.3em; line-height: 1.8em; text-align: center; color: #000000;}
 .ui-datepicker .ui-datepicker-title select { font-size:1em; margin:1px 0; }
 .ui-datepicker select.ui-datepicker-month-year {width: 100%;}
 .ui-datepicker select.ui-datepicker-month, 
@@ -901,6 +901,16 @@ For tab level 4 style toolbar
 
 .ui-datepicker-prev .ui-icon, .ui-datepicker-next .ui-icon {
 	background-image: url("../images_skin/ui-icons_72a7cf_256x240.png");
+	cursor: pointer;
+}
+
+.ui-datepicker-calendar .ui-state-hover {
+	background-color: #F1EEE9;
+}
+
+.ui-selectmanymenu .ui-state-active {
+	background-color: #3399FF;
+    color: #FFFFFF;
 }
 
 .ui-chkbox .ui-chkbox-box {
